# showbiz

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  index.html  next.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  provider_request.yml
.github/PULL_REQUEST_TEMPLATE/: release.md
.github/workflows/: ci.yml
app/: layout.tsx  page.tsx
app/actions/: gemini-actions.ts  generation-actions.ts  image-version-actions.ts  project-actions.ts  settings-actions.ts  shot-actions.ts  timeline-actions.ts
app/components/: Header.tsx  ImageVersionTimeline.tsx  ProjectCard.tsx  SettingsDialog.tsx  (+3 more)
docs/: architecture.md  electron-migration.md  html5-video-migration.md
electron/: app-menu.test.ts  app-menu.ts  db.test.ts  db.ts  export-deps.ts  export.test.ts  export.ts  ipc.test.ts  ipc.ts  main.ts  media-files.test.ts  media-files.ts  media.test.ts  media.ts  preload.ts
electron-spike/: main.cjs  preload.cjs  spike.html
scripts/: dev-electron.mjs
src/: App.tsx  globals.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: download-mpv.sh
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  main.rs  media.rs  video_normalize.rs
src-tauri/src/commands/: bibles.rs  http_client.rs  image_versions.rs  media_cmd.rs  mod.rs  mpv.rs  projects.rs  settings.rs  shots.rs  timeline.rs  video_versions.rs
src-tauri/src/commands/mpv/: ipc.rs  libmpv.rs  mod.rs
(+236 files in other folders)
